@@ -1,5 +1,8 @@
 LIST OF CHANGES
 
+ - status monitor will now work only with RFC 3339 compliant
+   timestamps defined in WTSI::DNAP::Utilities::Timestamp
+
 release 88.2.1
  - patch to accommodate different URL info passed to the CGI
    module by different Apache httpd versions
